fixed navbar display on tablets

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3779,9 +3779,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: 4px;
 }
 @media (min-width: 768px) {
-  .navbar-toggle {
+  .navbar-toggle,#sidebar {
     display: none;
   }
+
 }
 .navbar-nav {
   margin: 7.5px -15px;
